--- a/myenterprise/myenterprise-web/pom.xml
+++ b/myenterprise/myenterprise-web/pom.xml
@@ -14,24 +14,29 @@
 
     <name>myenterprise-web</name>
 
-  
     <dependencies>
         <dependency>
             <groupId>org.apache.openejb</groupId>
             <artifactId>apache-tomee</artifactId>
-            <version>1.5.0</version>
+            <version>1.5.2-SNAPSHOT</version>
             <classifier>webprofile</classifier>
             <type>zip</type>
             <scope>provided</scope>
         </dependency>
-        <!-- 
-            MyFaces CODI, IF YOU UNCOMMENT CODI DEPENDENCIES, THE 
-            EAR CANT BE DEPLOYED.
-        -->
-
-
-
        
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>2.1.10</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>2.1.10</version>
+            <scope>provided</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
@@ -57,7 +62,6 @@
             <version>1.0.5</version>
             <scope>runtime</scope>
         </dependency>
-
 
         <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
