--- a/myenterprise/myenterprise-web/src/main/webapp/WEB-INF/web.xml
+++ b/myenterprise/myenterprise-web/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,11 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
+         version="3.0" metadata-complete="true">
+    
+    <display-name>Tomee Application</display-name>
+    <module-name>foo</module-name>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
