--- a/myenterprise/pom.xml
+++ b/myenterprise/pom.xml
@@ -35,10 +35,11 @@
                     <tomeeHttpPort>8080</tomeeHttpPort>
                     <tomeeShutdownPort>8005</tomeeShutdownPort>
                     <removeDefaultWebapps>true</removeDefaultWebapps>
+                    <tomeeClassifier>webprofile</tomeeClassifier>
                     <keepServerXmlAsthis>true</keepServerXmlAsthis>
                     <debug>false</debug>
                     <debugPort>5005</debugPort>
-                    <args>-Dfoo.host=mymailing.com -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</args>
+                    <args>-Dmyenterpise-web.host=mymailing.com -Dmyenterpise-web2.host=mymailing2.com -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</args>
                     <apps>
                         <app>com.grupokx:myenterprise-ear:1.0-SNAPSHOT:ear</app>
                     </apps>
