--- a/myenterprise/kx-apps-mailing-resources/pom.xml
+++ b/myenterprise/kx-apps-mailing-resources/pom.xml
@@ -8,11 +8,11 @@
     </parent>
 
     <groupId>com.grupokx</groupId>
-    <artifactId>kx-apps-mailing-resources</artifactId>
+    <artifactId>myenterprise-web-2</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>kx-apps-mailing-resources</name>
+    <name>myenterprise-web-2</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
