--- a/myenterprise/myenterprise-ear/pom.xml
+++ b/myenterprise/myenterprise-ear/pom.xml
@@ -56,7 +56,7 @@
         </dependency>
         <dependency>
             <groupId>com.grupokx</groupId>
-            <artifactId>kx-apps-mailing-resources</artifactId>
+            <artifactId>myenterprise-web-2</artifactId>
             <version>1.0</version>
             <type>war</type>
         </dependency>
