--- a/myenterprise/myenterprise-web-2/pom.xml
+++ b/myenterprise/myenterprise-web-2/pom.xml
@@ -20,6 +20,22 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.apache.openejb</groupId>
+            <artifactId>apache-tomee</artifactId>
+            <version>1.5.2-SNAPSHOT</version>
+            <classifier>webprofile</classifier>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>2.1.10</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
             <artifactId>myfaces-extcdi-core-api</artifactId>
             <version>1.0.5</version>
