--- a/myenterprise/myenterprise-web/src/main/webapp/WEB-INF/web.xml
+++ b/myenterprise/myenterprise-web/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,13 @@
     <display-name>Tomee Application</display-name>
     <module-name>myenterpise-web</module-name>
     
+    <context-param>
+        <description>State saving method: "client" or "server" (= default)
+            See JSF Specification 2.5.3
+        </description>
+        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+        <param-value>server</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -17,6 +24,9 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.xhtml</welcome-file>
+    </welcome-file-list>
     <session-config>
         <session-timeout>
             30
