--- a/myenterprise/pom.xml
+++ b/myenterprise/pom.xml
@@ -30,10 +30,19 @@
     </pluginRepositories>
     
     <properties>
-        <myDirectoryFolder>${user.home}/github/myenterprise</myDirectoryFolder>
-        <resourcesDir.kx-apps-mailing>${myDirectoryFolder}/myenterprise-web/src/main/webapp</resourcesDir.kx-apps-mailing>
-        <targetResourcesDir.kx-apps-mailing>${myDirectoryFolder}/myenterprise-ear/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-1.0-SNAPSHOT</targetResourcesDir.kx-apps-mailing>
-        <binariesDir.kx-apps-mailing>${myDirectoryFolder}/myenterprise-web/target/classes</binariesDir.kx-apps-mailing>
-        <targetBinariesDir.kx-apps-mailing>${myDirectoryFolder}/myenterprise-ear/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-1.0-SNAPSHOT/WEB-INF/classes</targetBinariesDir.kx-apps-mailing>
+        <myDirectoryFolder>${user.home}/repositorios/mygit/tomee.git/trunk/myenterprise</myDirectoryFolder>
+        
+        <!--DIRS FOR WEBAPP 1-->
+        <resourcesDir.web1>${myDirectoryFolder}/myenterprise-web/src/main/webapp</resourcesDir.web1>
+        <targetResourcesDir.web1>${myDirectoryFolder}/myenterprise-ear/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-1.0-SNAPSHOT</targetResourcesDir.web1>
+        <binariesDir.web1>${myDirectoryFolder}/myenterprise-web/target/classes</binariesDir.web1>
+        <targetBinariesDir.web1>${myDirectoryFolder}/myenterprise-ear/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-1.0-SNAPSHOT/WEB-INF/classes</targetBinariesDir.web1>
+        
+        <!--DIRS FOR WEBAPP 2-->        
+        <resourcesDir.web2>${myDirectoryFolder}/myenterprise-web-2/src/main/webapp</resourcesDir.web2>
+        <targetResourcesDir.web2>${myDirectoryFolder}/myenterprise-ear/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-2-1.0-SNAPSHOT</targetResourcesDir.web2>
+        <binariesDir.web2>${myDirectoryFolder}/myenterprise-web-2/target/classes</binariesDir.web2>
+        <targetBinariesDir.web2>${myDirectoryFolder}/myenterprise-ear/target/apache-tomee/apps/myenterprise-ear-1.0-SNAPSHOT/myenterprise-web-2-1.0-SNAPSHOT/WEB-INF/classes</targetBinariesDir.web2>
+        
     </properties>
 </project>
