--- a/myenterprise/myenterprise-ear/pom.xml
+++ b/myenterprise/myenterprise-ear/pom.xml
@@ -16,7 +16,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
     </properties>
 
     <build>
@@ -141,6 +140,13 @@
             <artifactId>myenterprise-web-2</artifactId>
             <version>1.0</version>
             <type>war</type>
+        </dependency>
+        <!--NEW DEPENDENCY-->
+        <dependency>
+            <groupId>com.grupokx</groupId>
+            <artifactId>myenterprise-resources</artifactId>
+            <version>1.0</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
