--- a/myenterprise/myenterprise-web/pom.xml
+++ b/myenterprise/myenterprise-web/pom.xml
@@ -15,6 +15,16 @@
     <name>myenterprise-web</name>
 
     <dependencies>
+        
+        <!--NEW DEPENDENCY-->
+        <dependency>
+            <groupId>com.grupokx</groupId>
+            <artifactId>myenterprise-resources</artifactId>
+            <version>1.0</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>org.apache.openejb</groupId>
             <artifactId>apache-tomee</artifactId>
@@ -37,8 +47,6 @@
             <version>2.1.10</version>
             <scope>provided</scope>
         </dependency>
-        
-        
         
         <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
