--- a/myenterprise/myenterprise-web/pom.xml
+++ b/myenterprise/myenterprise-web/pom.xml
@@ -19,7 +19,7 @@
         <!--NEW DEPENDENCY-->
         <dependency>
             <groupId>com.grupokx</groupId>
-            <artifactId>myenterprise-resources</artifactId>
+            <artifactId>myenterprise-shared</artifactId>
             <version>1.0</version>
             <type>jar</type>
             <scope>provided</scope>
