--- a/myenterprise/myenterprise-ear/pom.xml
+++ b/myenterprise/myenterprise-ear/pom.xml
@@ -108,6 +108,8 @@
         </plugins>
     </build>
     <dependencies>
+        
+        <!-- IF YOU UNCOMMENT THIS LINES, THE EXAMPLE WORKS, BUT WHY??
         <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
             <artifactId>myfaces-extcdi-core-api</artifactId>
@@ -131,6 +133,10 @@
             <version>1.0.5</version>
             <scope>runtime</scope>
         </dependency>
+        -->
+        
+        
+        
         <dependency>
             <groupId>com.grupokx</groupId>
             <artifactId>myenterprise-ejb</artifactId>
