--- a/myenterprise/myenterprise-ejb/pom.xml
+++ b/myenterprise/myenterprise-ejb/pom.xml
@@ -22,52 +22,10 @@
         <dependency>
             <groupId>org.apache.openejb</groupId>
             <artifactId>apache-tomee</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>${apache.tomee.version}</version>
             <classifier>webprofile</classifier>
             <type>zip</type>
             <scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.apache.openjpa</groupId>
-            <artifactId>openjpa</artifactId>
-            <version>2.2.0</version>
-            <scope>provided</scope>
-        </dependency>
-        
-        <!--MySQL Connector-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.19</version>
-            <scope>provided</scope>
-        </dependency>
-        
-         <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
-            <artifactId>myfaces-extcdi-core-api</artifactId>
-            <version>1.0.5</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
-            <artifactId>myfaces-extcdi-core-impl</artifactId>
-            <version>1.0.5</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
-            <artifactId>myfaces-extcdi-jsf20-module-api</artifactId>
-            <version>1.0.5</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
-            <artifactId>myfaces-extcdi-jsf20-module-impl</artifactId>
-            <version>1.0.5</version>
-            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
