--- a/myenterprise/myenterprise-web-2/src/main/webapp/WEB-INF/web.xml
+++ b/myenterprise/myenterprise-web-2/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	 version="3.0" metadata-complete="false">
-    
+<web-app metadata-complete="false" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <module-name>myenterpise-web-2</module-name>
-    
     <context-param>
         <description>State saving method: "client" or "server" (= default)
             See JSF Specification 2.5.3
@@ -28,8 +22,27 @@
     </welcome-file-list>
     <session-config>
         <session-timeout>
-            30
+            1
         </session-timeout>
     </session-config>
-    
+    <security-constraint>
+        <display-name>PRIVATE_CONTENT_CONSTRAINT</display-name>
+        <web-resource-collection>
+            <web-resource-name>PRIVATE_CONTENT_CONSTRAINT</web-resource-name>
+            <url-pattern>/private/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>tomee-admin</role-name>
+            <role-name>manager-gui</role-name>
+            <role-name>manager-script</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/index.xhtml</form-login-page>
+            <form-error-page>/index.xhtml</form-error-page>
+        </form-login-config>
+    </login-config>
 </web-app>
